sumo/tests/duarouter/alternatives/style2_input/errors/route/route_prob_empty/input_alts.rou.xml.alt
<route-alternatives>
   <vtype id="KRAUSS_DEFAULT" accel="2.6" decel="4.5" sigma="0.5" length="5" maxspeed="70" color="1,1,0"/>

   <vehicle id="0" type="KRAUSS_DEFAULT" route="0" depart="0">
   <routeDistribution last="0">
      <route cost="125.126" probability="1">beg middle end rend</route>
   </routeDistribution>
   </vehicle>

   <vehicle id="1" type="KRAUSS_DEFAULT" route="1" depart="10">
   <routeDistribution last="0">
      <route cost="125.126" probability="">beg middle end rend</route>
   </routeDistribution>
   </vehicle>

</route-alternatives>
